2001-02-13  James Henstridge  <james@daa.com.au>

	Apply patch from Stephan R.A. Deibel <sdeibel@archaeopteryx.com>

	* GDK.py: add new constants.

	* gtkmodule.c (PyGdkColor_Alloc): implement
	(PyGdkWindow_Raise): rename GdkWindow._raise -> raise_.  Old name
	still works.  This is more consistent with other python modules to
	get rid of keyword conflicts.
	(PyGdkWindow_Show): added method.
	(PyGdkWindow_Hide): added method.
	(PyGdkWindow_Destroy): added method.
	(PyGdkWindow_GetAttr): add origin, deskrelative_origin and
	root_origin attributes, each of which is a tuple of integers.
	(_wrap_gdk_window_new): new function.

2001-02-11  James Henstridge  <james@daa.com.au>

	* gtk.py (GtkWidget.drag_get_source_widget): fix up wrapper.

	* gtkmodule.c (_wrap_gtk_drag_get_source_widget): guard against
	NULL return.

	* generate/gtkcontainers.defs (GtkSocket): fix parent type.

	* generate/gtkbase.defs (gtk_widget_get_extension_events): fix
	return value type.
	(gtk_widget_set_extension_events): fix argument type.

2000-09-20  James Henstridge  <james@daa.com.au>

	* gtkmodule.c: use shorts for the format string for arguments to
	GdkColormap.alloc so that they actually work on big endian
	machines.

2000-09-18  James Henstridge  <james@daa.com.au>

	* gtk.py (GtkCTree.node_get_cell_style): bug fix from Aaron
	Digulla.  Call gtk_ctree_node_[sg]et_cell_style for the
	node_[sg]et_cell_style methods.

2000-06-19  Frederic Gobry  <frederic.gobry@epfl.ch>

	* gdkimlibmodule.c: do an actual call to create_from_array instead
	of create_from_data, and fixed broken test on alpha channel

2000-04-15  James Henstridge  <james@daa.com.au>

	* gtkmodule.c: move gtk_set_locale here, and set LC_NUMERIC back to
	"C" after call.  Python's numeric locale should be fixed on C.

2000-04-07  James Henstridge  <james@daa.com.au>

	* NEWS: added news items.

	* pygtk.spec, configure.in: updated version number.

	* configure.in (enable_numpy): added --disable-numpy argument that