@@ -1,3 +1,11 @@
+2001-02-15  James Henstridge  <james@daa.com.au>
+
+	* gtkmodule.c (GtkStyle_...): guard against NULL values in some
+	parts.
+	(PyGdkWindow_GetAttr): make some attributes inaccessible for
+	GDK_WINDOW_PIXMAP GdkWindows.
+	(_wrap_gtk_set_locale): fix typo.
+
 2001-02-13  James Henstridge  <james@daa.com.au>
 
 	Apply patch from Stephan R.A. Deibel <sdeibel@archaeopteryx.com>
